Finished Home page

--- a/index.html
+++ b/index.html
@@ -16,5 +16,35 @@
     <link rel="stylesheet" href="style.css" />
     <title>Golden BIS</title>
   </head>
-  <body></body>
+  <body>
+    <div class="home">
+      <div class="home__gradient"></div>
+      <div class="home__content">
+        <div class="home__nav">
+          <img src="img/logo.png" alt="Logo" />
+          <ul class="home__list">
+            <li class="home__item">
+              <a href="#" class="home__link">Home</a>
+            </li>
+            <li class="home__item">
+              <a href="#" class="home__link">Information</a>
+            </li>
+            <li class="home__item">
+              <a href="#" class="home__link">Gallery</a>
+            </li>
+            <li class="home__item">
+              <a href="#" class="home__link">Contact</a>
+            </li>
+          </ul>
+        </div>
+        <div class="home__text">
+          <h1 class="home__text-up"><span>GOLDEN BIS</span> APARTMENTS</h1>
+          <p class="home__text-down">
+            Ones of the highest rated apartments on <span>Booking</span> and
+            <span>Airbnb</span> with more than 40 ratings.
+          </p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
