Finished Info page

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <title>Golden BIS</title>
   </head>
   <body>
-    <div class="home">
+    <section id="home" class="home">
       <div class="home__gradient"></div>
-      <div class="home__content">
+      <div class="content">
         <div class="home__nav">
-          <img src="img/logo.png" alt="Logo" />
+          <img class="home__logo" src="img/logo.png" alt="Logo" />
           <ul class="home__list">
             <li class="home__item">
               <a href="#" class="home__link">Home</a>
@@ -38,13 +38,148 @@
           </ul>
         </div>
         <div class="home__text">
-          <h1 class="home__text-up"><span>GOLDEN BIS</span> APARTMENTS</h1>
-          <p class="home__text-down">
+          <h1 class="home__text--up">
+            <span class="home__name">GOLDEN BIS</span> APARTMENTS
+          </h1>
+          <p class="home__text--down">
             Ones of the highest rated apartments on <span>Booking</span> and
             <span>Airbnb</span> with more than 40 ratings.
           </p>
         </div>
       </div>
-    </div>
+    </section>
+    <section id="info" class="info">
+      <div class="content">
+        <h2 class="heading">BASIC <span>INFORMATION</span></h2>
+        <div class="info__block">
+          <p class="info__block--item">
+            <span>GOLDEN BIS</span> is unique for its
+            <span>hospitality</span> and the host's desire to make your stay
+            <span></span>enjoyable and memorable. We strive to justify your
+            trust in every sense. There are <span>two terraces</span> in the
+            building where one can always watch the sunrise and the other the
+            <span>sunset</span>. We are always here to make all your activities
+            as <span>additional transportation</span>, additional services in
+            the apartment or additional information about events or
+            <span>tourist attractions</span> complete and complete. We are at
+            your disposal for each of your ideas or requests.
+          </p>
+          <p class="info__block--item">
+            <span>GOLDEN BIS</span> offers comfortable and
+            <span>modern accommodation</span> in a very
+            <span>quiet neighborhood</span> near the <span>city center</span>.
+            The apartment is located on the second floor of the house, this
+            apartment has <span>two bedrooms</span>, one in a double bed with a
+            large closet and in the other two single beds and a closet with
+            access to a fenced and tiled terrace. The apartment also has a large
+            <span>luxury living room</span> and dining area. There is also a
+            kitchen at guests' disposal, <span>fully equipped</span> with
+            kitchen appliances for preparing and storing food. At the entrance
+            to the apartment there is a terrace with a seating area, overlooking
+            the Town Hall.
+          </p>
+          <p class="info__block--item">
+            The surroundings of <span>GOLDEN BIS</span> are always
+            <span>calm and quiet</span> in the evening and at the time
+            prescribed by the house rules. The building is in an
+            <span>excellent position</span> a few minutes from the city center,
+            but still equipped with all the necessary amenities a few steps from
+            the apartment, there is a <span>large market</span>, two bakeries, a
+            butcher shop, two shops, exchange office. Ambulance, Ambulance,
+            pharmacy. Gym. Playground for children. The popular Dud Suma Walking
+            or Exercising Park is 700 meters from the apartment.
+            <span>Bus and taxi station</span> is located 300m from the
+            apartment.
+          </p>
+        </div>
+        <h2 class="heading">ADDITIONAL <span>INFORMATION</span></h2>
+        <div class="info__grid">
+          <div class="info__grid--item">
+            <i class="fas fa-wifi"></i>
+            <p class="grid__text">
+              WiFi is available in all areas and is free of charge.
+            </p>
+          </div>
+          <div class="info__grid--item">
+            <i class="fas fa-parking"></i>
+            <p class="grid__text">
+              Free private parking is available on site (reservation is not
+              needed).
+            </p>
+          </div>
+          <div class="info__grid--item">
+            <i class="fas fa-language"></i>
+            <p class="grid__text">
+              We speak - English, Russian, German, Polish and Serbian.
+            </p>
+          </div>
+          <div class="info__grid--item">
+            <i class="fas fa-home"></i>
+            <p class="grid__text">
+              The apartment consists of 2 separate bedrooms, 1 bathroom and a
+              living room.
+            </p>
+          </div>
+          <div class="info__grid--item">
+            <i class="fas fa-bed"></i>
+            <p class="grid__text">
+              We have 1 king bed in one bedroom and 2 single beds in the other
+              bedroom.
+            </p>
+          </div>
+          <div class="info__grid--item">
+            <i class="fas fa-broom"></i>
+            <p class="grid__text">
+              We offer paid services such as: daily housekeeping, ironing
+              service, laundry.
+            </p>
+          </div>
+          <div class="info__grid--item">
+            <i class="fas fa-tree"></i>
+            <p class="grid__text">
+              Outdoor facilities: BBQ facilities, terrace, garden.
+            </p>
+          </div>
+          <div class="info__grid--item">
+            <i class="fas fa-fan"></i>
+            <p class="grid__text">
+              We have a designated smoking area, air conditioning, smoke-free
+              property, heating etc.
+            </p>
+          </div>
+          <div class="info__grid--item">
+            <i class="fas fa-pizza-slice"></i>
+            <p class="grid__text">
+              You can cook your own food. We offer cooking basics: pots and
+              pans, oil, salt and pepper, etc.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="gallery" class="gallery">
+      <div class="content">
+        <div class="gallery__images">
+          <img class="gallery__img" src="img/img-1.jpg" alt="" />
+          <img class="gallery__img" src="img/img-2.jpg" alt="" />
+          <img class="gallery__img" src="img/img-3.jpg" alt="" />
+          <img class="gallery__img" src="img/img-4.jpg" alt="" />
+          <img class="gallery__img" src="img/img-5.jpg" alt="" />
+          <img class="gallery__img" src="img/img-6.jpg" alt="" />
+          <img class="gallery__img" src="img/img-7.jpg" alt="" />
+          <img class="gallery__img" src="img/img-8.jpg" alt="" />
+          <img class="gallery__img" src="img/img-9.jpg" alt="" />
+          <img class="gallery__img" src="img/img-10.jpg" alt="" />
+          <img class="gallery__img" src="img/img-11.jpg" alt="" />
+          <img class="gallery__img" src="img/img-12.jpg" alt="" />
+          <img class="gallery__img" src="img/img-13.jpg" alt="" />
+          <img class="gallery__img" src="img/img-14.jpg" alt="" />
+          <img class="gallery__img" src="img/img-15.jpg" alt="" />
+          <img class="gallery__img" src="img/img-16.jpg" alt="" />
+          <img class="gallery__img" src="img/img-17.jpg" alt="" />
+          <img class="gallery__img" src="img/img-18.jpg" alt="" />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
