Finished Contact page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <title>Golden BIS</title>
   </head>
   <body>
+    <!---------- HOME ---------->
     <section id="home" class="home">
       <div class="home__gradient"></div>
       <div class="content">
@@ -48,6 +49,8 @@
         </div>
       </div>
     </section>
+
+    <!---------- INFORMATION ---------->
     <section id="info" class="info">
       <div class="content">
         <h2 class="heading">BASIC <span>INFORMATION</span></h2>
@@ -157,6 +160,8 @@
         </div>
       </div>
     </section>
+
+    <!---------- GALLERY ---------->
     <section id="gallery" class="gallery">
       <div class="content">
         <div class="gallery__images">
@@ -178,6 +183,42 @@
           <img class="gallery__img" src="img/img-16.jpg" alt="" />
           <img class="gallery__img" src="img/img-17.jpg" alt="" />
           <img class="gallery__img" src="img/img-18.jpg" alt="" />
+        </div>
+      </div>
+    </section>
+
+    <!---------- GALLERY ---------->
+    <section id="contact" class="contact">
+      <div class="content contact__content">
+        <div class="contact__left">
+          <img class="contact__logo" src="img/logo.png" alt="" />
+          <div class="contact__personal">
+            <div class="contact__personal--item">
+              <i class="contact__personal--icon fas fa-map-marker-alt"></i>
+              <p>Praška 64, Subotica, Serbia</p>
+            </div>
+            <div class="contact__personal--item">
+              <i class="contact__personal--icon fas fa-mobile-alt"></i>
+              <p>+381 65 3580334</p>
+            </div>
+            <div class="contact__personal--item">
+              <i class="contact__personal--icon fas fa-envelope"></i>
+              <p>goldenbis@gmail.com</p>
+            </div>
+          </div>
+          <div class="contact__social">
+            <i class="contact__social--icon fab fa-airbnb"></i>
+            <i class="contact__social--icon fab fa-bootstrap"></i>
+            <i class="contact__social--icon fab fa-instagram"></i>
+            <i class="contact__social--icon fab fa-facebook-f"></i>
+          </div>
+        </div>
+
+        <div class="contact__right">
+          <iframe
+            class="contact__map"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31302.603749818307!2d19.65148787797456!3d46.09525441193648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4743677b2bba6453%3A0x82d7d4b33f561f45!2sGolden%20BIS!5e0!3m2!1ssr!2srs!4v1580912473721!5m2!1ssr!2srs"
+          ></iframe>
         </div>
       </div>
     </section>
