Finished media queries

--- a/index.html
+++ b/index.html
@@ -43,8 +43,15 @@
             <span class="home__name">GOLDEN BIS</span> APARTMENTS
           </h1>
           <p class="home__text--down">
-            Ones of the highest rated apartments on <span>Booking</span> and
-            <span>Airbnb</span> with more than 40 ratings.
+            Ones of the highest rated apartments on
+            <a target="_blank" href="https://www.booking.com/Share-DFiLf8"
+              ><span>Booking</span></a
+            >
+            and
+            <a target="_blank" href="https://abnb.me/uGNzfpwfz3"
+              ><span>Airbnb</span></a
+            >
+            with more than 40 ratings.
           </p>
         </div>
       </div>
@@ -150,7 +157,7 @@
               property, heating etc.
             </p>
           </div>
-          <div class="info__grid--item">
+          <div class="info__grid--item info__grid--last">
             <i class="fas fa-pizza-slice"></i>
             <p class="grid__text">
               You can cook your own food. We offer cooking basics: pots and
@@ -187,7 +194,7 @@
       </div>
     </section>
 
-    <!---------- GALLERY ---------->
+    <!---------- CONTACT ---------->
     <section id="contact" class="contact">
       <div class="content contact__content">
         <div class="contact__left">
@@ -213,7 +220,6 @@
             <i class="contact__social--icon fab fa-facebook-f"></i>
           </div>
         </div>
-
         <div class="contact__right">
           <iframe
             class="contact__map"
@@ -221,6 +227,14 @@
           ></iframe>
         </div>
       </div>
+    </section>
+
+    <!---------- COPYRIGHT ---------->
+    <section class="copyright">
+      <p class="copyright__message">
+        Copyright © 2020 <span>Golden BIS</span> ─ All rights reserved. Powered
+        by <span>Bojan Tubic</span>.
+      </p>
     </section>
   </body>
 </html>
