Added slider, footer, and small fixes

--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
           <img class="home__logo" src="img/logo.png" alt="Logo" />
           <ul class="home__list">
             <li class="home__item">
-              <a href="#" class="home__link">Home</a>
+              <a href="#home" class="home__link">Home</a>
             </li>
             <li class="home__item">
-              <a href="#" class="home__link">Information</a>
+              <a href="#info" class="home__link">Information</a>
             </li>
             <li class="home__item">
-              <a href="#" class="home__link">Gallery</a>
+              <a href="#gallery" class="home__link">Gallery</a>
             </li>
             <li class="home__item">
-              <a href="#" class="home__link">Contact</a>
+              <a href="#contact" class="home__link">Contact</a>
             </li>
           </ul>
         </div>
@@ -56,7 +56,6 @@
         </div>
       </div>
     </section>
-
     <!---------- INFORMATION ---------->
     <section id="info" class="info">
       <div class="content">
@@ -157,7 +156,7 @@
               property, heating etc.
             </p>
           </div>
-          <div class="info__grid--item info__grid--last">
+          <div class="info__grid--item">
             <i class="fas fa-pizza-slice"></i>
             <p class="grid__text">
               You can cook your own food. We offer cooking basics: pots and
@@ -167,7 +166,6 @@
         </div>
       </div>
     </section>
-
     <!---------- GALLERY ---------->
     <section id="gallery" class="gallery">
       <div class="content">
@@ -193,7 +191,6 @@
         </div>
       </div>
     </section>
-
     <!---------- CONTACT ---------->
     <section id="contact" class="contact">
       <div class="content contact__content">
@@ -214,10 +211,22 @@
             </div>
           </div>
           <div class="contact__social">
-            <i class="contact__social--icon fab fa-airbnb"></i>
-            <i class="contact__social--icon fab fa-bootstrap"></i>
-            <i class="contact__social--icon fab fa-instagram"></i>
-            <i class="contact__social--icon fab fa-facebook-f"></i>
+            <a target="_blank" href="https://abnb.me/uGNzfpwfz3"
+              ><i class="contact__social--icon fab fa-airbnb"></i
+            ></a>
+            <a target="_blank" href="https://www.booking.com/Share-DFiLf8"
+              ><i class="contact__social--icon fab fa-bootstrap"></i
+            ></a>
+            <a
+              target="_blank"
+              href="https://instagram.com/goldenbis_apartmani_subotica?igshid=1la70950qs5gu"
+              ><i class="contact__social--icon fab fa-instagram"></i
+            ></a>
+            <a
+              target="_blank"
+              href="https://www.facebook.com/apartmaniGoldenBIS/"
+              ><i class="contact__social--icon fab fa-facebook"></i
+            ></a>
           </div>
         </div>
         <div class="contact__right">
@@ -228,13 +237,13 @@
         </div>
       </div>
     </section>
-
     <!---------- COPYRIGHT ---------->
     <section class="copyright">
       <p class="copyright__message">
         Copyright © 2020 <span>Golden BIS</span> ─ All rights reserved. Powered
-        by <span>Bojan Tubic</span>.
+        by <span>Bojan Tubić</span>.
       </p>
     </section>
+    <script src="app.js"></script>
   </body>
 </html>
