--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <section id="home" class="home">
       <div class="home__gradient"></div>
       <div class="content">
+        <div class="home__btn">
+          <div class="home__btn--line"></div>
+        </div>
         <div class="home__nav">
           <img class="home__logo" src="img/logo.png" alt="Logo" />
           <ul class="home__list">
