--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     </section>
     <!---------- INFORMATION ---------->
     <section id="info" class="info">
+      <div class="filler">&nbsp;</div>
       <div class="content">
         <h2 class="heading">BASIC <span>INFORMATION</span></h2>
         <div class="info__block">
