Deleted pictures and added links

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
           <p class="home__text--down">
             Ones of the highest rated apartments on
             <a target="_blank" href="https://www.booking.com/Share-DFiLf8"
-              ><span>Booking</span></a
+              ><span class="underline">Booking</span></a
             >
             and
             <a target="_blank" href="https://abnb.me/uGNzfpwfz3"
-              ><span>Airbnb</span></a
+              ><span class="underline">Airbnb</span></a
             >
             with more than 40 ratings.
           </p>
@@ -183,15 +183,6 @@
           <img class="gallery__img" src="img/img-7.jpg" alt="" />
           <img class="gallery__img" src="img/img-8.jpg" alt="" />
           <img class="gallery__img" src="img/img-9.jpg" alt="" />
-          <img class="gallery__img" src="img/img-10.jpg" alt="" />
-          <img class="gallery__img" src="img/img-11.jpg" alt="" />
-          <img class="gallery__img" src="img/img-12.jpg" alt="" />
-          <img class="gallery__img" src="img/img-13.jpg" alt="" />
-          <img class="gallery__img" src="img/img-14.jpg" alt="" />
-          <img class="gallery__img" src="img/img-15.jpg" alt="" />
-          <img class="gallery__img" src="img/img-16.jpg" alt="" />
-          <img class="gallery__img" src="img/img-17.jpg" alt="" />
-          <img class="gallery__img" src="img/img-18.jpg" alt="" />
         </div>
       </div>
     </section>
@@ -203,15 +194,17 @@
           <div class="contact__personal">
             <div class="contact__personal--item">
               <i class="contact__personal--icon fas fa-map-marker-alt"></i>
-              <p>Praška 64, Subotica, Serbia</p>
+              <address>Praška 64, Subotica, Serbia</address>
             </div>
             <div class="contact__personal--item">
               <i class="contact__personal--icon fas fa-mobile-alt"></i>
-              <p>+381 65 3580334</p>
+              <a href="tel:+381653580334">+381 65 3580334</a>
             </div>
             <div class="contact__personal--item">
               <i class="contact__personal--icon fas fa-envelope"></i>
-              <p>goldenbis@gmail.com</p>
+              <a href="mailto:goldenbisapartments@gmail.com"
+                >goldenbisapartments@gmail.com</a
+              >
             </div>
           </div>
           <div class="contact__social">
@@ -243,10 +236,12 @@
     </section>
     <!---------- COPYRIGHT ---------->
     <section class="copyright">
-      <p class="copyright__message">
-        Copyright © 2020 <span>Golden BIS</span> ─ All rights reserved. Powered
-        by <span>Bojan Tubić</span>.
-      </p>
+      <div class="content">
+        <p class="copyright__message">
+          Copyright © 2020 <span>Golden BIS</span> ─ All rights reserved.
+          Powered by <span>Bojan Tubić</span>.
+        </p>
+      </div>
     </section>
     <script src="app.js"></script>
   </body>
