--- a/index.html
+++ b/index.html
@@ -194,7 +194,11 @@
           <div class="contact__personal">
             <div class="contact__personal--item">
               <i class="contact__personal--icon fas fa-map-marker-alt"></i>
-              <address>Praška 64, Subotica, Serbia</address>
+              <a
+                href="https://www.google.com/maps?ll=46.104172,19.648245&z=14&t=m&hl=sr&gl=RS&mapclient=embed&cid=9428238211250265925"
+                >Praška 64, Subotica, Serbia</a
+              >
+              a
             </div>
             <div class="contact__personal--item">
               <i class="contact__personal--icon fas fa-mobile-alt"></i>
