--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
               <i class="contact__personal--icon fas fa-map-marker-alt"></i>
               <a
                 href="https://www.google.com/maps?ll=46.104172,19.648245&z=14&t=m&hl=sr&gl=RS&mapclient=embed&cid=9428238211250265925"
+                target="_blank"
                 >Praška 64, Subotica, Serbia</a
               >
               a
