--- a/index.html
+++ b/index.html
@@ -1,253 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0/css/all.min.css"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Golden BIS</title>
-  </head>
-  <body>
-    <!---------- HOME ---------->
-    <section id="home" class="home">
-      <div class="home__gradient"></div>
-      <div class="content">
-        <div class="home__btn">
-          <div class="home__btn--line"></div>
-        </div>
-        <div class="home__nav">
-          <img class="home__logo" src="img/logo.png" alt="Logo" />
-          <ul class="home__list">
-            <li class="home__item">
-              <a href="#home" class="home__link">Home</a>
-            </li>
-            <li class="home__item">
-              <a href="#info" class="home__link">Information</a>
-            </li>
-            <li class="home__item">
-              <a href="#gallery" class="home__link">Gallery</a>
-            </li>
-            <li class="home__item">
-              <a href="#contact" class="home__link">Contact</a>
-            </li>
-          </ul>
-        </div>
-        <div class="home__text">
-          <h1 class="home__text--up">
-            <span class="home__name">GOLDEN BIS</span> APARTMENTS
-          </h1>
-          <p class="home__text--down">
-            Ones of the highest rated apartments on
-            <a target="_blank" href="https://www.booking.com/Share-DFiLf8"
-              ><span class="underline">Booking</span></a
-            >
-            and
-            <a target="_blank" href="https://abnb.me/uGNzfpwfz3"
-              ><span class="underline">Airbnb</span></a
-            >
-            with more than 40 ratings.
-          </p>
-        </div>
-      </div>
-    </section>
-    <!---------- INFORMATION ---------->
-    <section id="info" class="info">
-      <div class="filler">&nbsp;</div>
-      <div class="content">
-        <h2 class="heading">BASIC <span>INFORMATION</span></h2>
-        <div class="info__block">
-          <p class="info__block--item">
-            <span>GOLDEN BIS</span> is unique for its
-            <span>hospitality</span> and the host's desire to make your stay
-            <span></span>enjoyable and memorable. We strive to justify your
-            trust in every sense. There are <span>two terraces</span> in the
-            building where one can always watch the sunrise and the other the
-            <span>sunset</span>. We are always here to make all your activities
-            as <span>additional transportation</span>, additional services in
-            the apartment or additional information about events or
-            <span>tourist attractions</span> complete and complete. We are at
-            your disposal for each of your ideas or requests.
-          </p>
-          <p class="info__block--item">
-            <span>GOLDEN BIS</span> offers comfortable and
-            <span>modern accommodation</span> in a very
-            <span>quiet neighborhood</span> near the <span>city center</span>.
-            The apartment is located on the second floor of the house, this
-            apartment has <span>two bedrooms</span>, one in a double bed with a
-            large closet and in the other two single beds and a closet with
-            access to a fenced and tiled terrace. The apartment also has a large
-            <span>luxury living room</span> and dining area. There is also a
-            kitchen at guests' disposal, <span>fully equipped</span> with
-            kitchen appliances for preparing and storing food. At the entrance
-            to the apartment there is a terrace with a seating area, overlooking
-            the Town Hall.
-          </p>
-          <p class="info__block--item">
-            The surroundings of <span>GOLDEN BIS</span> are always
-            <span>calm and quiet</span> in the evening and at the time
-            prescribed by the house rules. The building is in an
-            <span>excellent position</span> a few minutes from the city center,
-            but still equipped with all the necessary amenities a few steps from
-            the apartment, there is a <span>large market</span>, two bakeries, a
-            butcher shop, two shops, exchange office. Ambulance, Ambulance,
-            pharmacy. Gym. Playground for children. The popular Dud Suma Walking
-            or Exercising Park is 700 meters from the apartment.
-            <span>Bus and taxi station</span> is located 300m from the
-            apartment.
-          </p>
-        </div>
-        <h2 class="heading">ADDITIONAL <span>INFORMATION</span></h2>
-        <div class="info__grid">
-          <div class="info__grid--item">
-            <i class="fas fa-wifi"></i>
-            <p class="grid__text">
-              WiFi is available in all areas and is free of charge.
-            </p>
-          </div>
-          <div class="info__grid--item">
-            <i class="fas fa-parking"></i>
-            <p class="grid__text">
-              Free private parking is available on site (reservation is not
-              needed).
-            </p>
-          </div>
-          <div class="info__grid--item">
-            <i class="fas fa-language"></i>
-            <p class="grid__text">
-              We speak - English, Russian, German, Polish and Serbian.
-            </p>
-          </div>
-          <div class="info__grid--item">
-            <i class="fas fa-home"></i>
-            <p class="grid__text">
-              The apartment consists of 2 separate bedrooms, 1 bathroom and a
-              living room.
-            </p>
-          </div>
-          <div class="info__grid--item">
-            <i class="fas fa-bed"></i>
-            <p class="grid__text">
-              We have 1 king bed in one bedroom and 2 single beds in the other
-              bedroom.
-            </p>
-          </div>
-          <div class="info__grid--item">
-            <i class="fas fa-broom"></i>
-            <p class="grid__text">
-              We offer paid services such as: daily housekeeping, ironing
-              service, laundry.
-            </p>
-          </div>
-          <div class="info__grid--item">
-            <i class="fas fa-tree"></i>
-            <p class="grid__text">
-              Outdoor facilities: BBQ facilities, terrace, garden.
-            </p>
-          </div>
-          <div class="info__grid--item">
-            <i class="fas fa-fan"></i>
-            <p class="grid__text">
-              We have a designated smoking area, air conditioning, smoke-free
-              property, heating etc.
-            </p>
-          </div>
-          <div class="info__grid--item">
-            <i class="fas fa-pizza-slice"></i>
-            <p class="grid__text">
-              You can cook your own food. We offer cooking basics: pots and
-              pans, oil, salt and pepper, etc.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!---------- GALLERY ---------->
-    <section id="gallery" class="gallery">
-      <div class="content">
-        <div class="gallery__images">
-          <img class="gallery__img" src="img/img-1.jpg" alt="" />
-          <img class="gallery__img" src="img/img-2.jpg" alt="" />
-          <img class="gallery__img" src="img/img-3.jpg" alt="" />
-          <img class="gallery__img" src="img/img-4.jpg" alt="" />
-          <img class="gallery__img" src="img/img-5.jpg" alt="" />
-          <img class="gallery__img" src="img/img-6.jpg" alt="" />
-          <img class="gallery__img" src="img/img-7.jpg" alt="" />
-          <img class="gallery__img" src="img/img-8.jpg" alt="" />
-          <img class="gallery__img" src="img/img-9.jpg" alt="" />
-        </div>
-      </div>
-    </section>
-    <!---------- CONTACT ---------->
-    <section id="contact" class="contact">
-      <div class="content contact__content">
-        <div class="contact__left">
-          <img class="contact__logo" src="img/logo.png" alt="" />
-          <div class="contact__personal">
-            <div class="contact__personal--item">
-              <i class="contact__personal--icon fas fa-map-marker-alt"></i>
-              <a
-                href="https://www.google.com/maps?ll=46.104172,19.648245&z=14&t=m&hl=sr&gl=RS&mapclient=embed&cid=9428238211250265925"
-                target="_blank"
-                >Praška 64, Subotica, Serbia</a
-              >
-              a
-            </div>
-            <div class="contact__personal--item">
-              <i class="contact__personal--icon fas fa-mobile-alt"></i>
-              <a href="tel:+381653580334">+381 65 3580334</a>
-            </div>
-            <div class="contact__personal--item">
-              <i class="contact__personal--icon fas fa-envelope"></i>
-              <a href="mailto:goldenbisapartments@gmail.com"
-                >goldenbisapartments@gmail.com</a
-              >
-            </div>
-          </div>
-          <div class="contact__social">
-            <a target="_blank" href="https://abnb.me/uGNzfpwfz3"
-              ><i class="contact__social--icon fab fa-airbnb"></i
-            ></a>
-            <a target="_blank" href="https://www.booking.com/Share-DFiLf8"
-              ><i class="contact__social--icon fab fa-bootstrap"></i
-            ></a>
-            <a
-              target="_blank"
-              href="https://instagram.com/goldenbis_apartmani_subotica?igshid=1la70950qs5gu"
-              ><i class="contact__social--icon fab fa-instagram"></i
-            ></a>
-            <a
-              target="_blank"
-              href="https://www.facebook.com/apartmaniGoldenBIS/"
-              ><i class="contact__social--icon fab fa-facebook"></i
-            ></a>
-          </div>
-        </div>
-        <div class="contact__right">
-          <iframe
-            class="contact__map"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31302.603749818307!2d19.65148787797456!3d46.09525441193648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4743677b2bba6453%3A0x82d7d4b33f561f45!2sGolden%20BIS!5e0!3m2!1ssr!2srs!4v1580912473721!5m2!1ssr!2srs"
-          ></iframe>
-        </div>
-      </div>
-    </section>
-    <!---------- COPYRIGHT ---------->
-    <section class="copyright">
-      <div class="content">
-        <p class="copyright__message">
-          Copyright © 2020 <span>Golden BIS</span> ─ All rights reserved.
-          Powered by <span>Bojan Tubić</span>.
-        </p>
-      </div>
-    </section>
-    <script src="app.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head> <meta charset="UTF-8"/> <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <meta http-equiv="X-UA-Compatible" content="ie=edge"/> <link rel="shortcut icon" href="img/logo.png" type="image/x-icon"/> <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"/> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0/css/all.min.css"/> <link rel="stylesheet" href="style.css"/> <title>Golden BIS</title></head><body> <section id="home" class="home"> <div class="home__gradient"></div><div class="content"> <div class="home__btn"> <div class="home__btn--line"></div></div><div class="home__nav"> <img class="home__logo" src="img/logo.png" alt="Logo"/> <ul class="home__list"> <li class="home__item"> <a href="#home" class="home__link">Home</a> </li><li class="home__item"> <a href="#info" class="home__link">Information</a> </li><li class="home__item"> <a href="#gallery" class="home__link">Gallery</a> </li><li class="home__item"> <a href="#contact" class="home__link">Contact</a> </li></ul> </div><div class="home__text"> <h1 class="home__text--up"> <span class="home__name">GOLDEN BIS</span> APARTMENTS </h1> <p class="home__text--down"> Ones of the highest rated apartments on <a target="_blank" href="https://www.booking.com/Share-DFiLf8"><span class="underline">Booking</span></a> and <a target="_blank" href="https://abnb.me/uGNzfpwfz3"><span class="underline">Airbnb</span></a> with more than 40 ratings. </p></div></div></section> <section id="info" class="info"> <div class="filler">&nbsp;</div><div class="content"> <h2 class="heading">BASIC <span>INFORMATION</span></h2> <div class="info__block"> <p class="info__block--item"> <span>GOLDEN BIS</span> is unique for its <span>hospitality</span> and the host's desire to make your stay <span></span>enjoyable and memorable. We strive to justify your trust in every sense. There are <span>two terraces</span> in the building where one can always watch the sunrise and the other the <span>sunset</span>. We are always here to make all your activities as <span>additional transportation</span>, additional services in the apartment or additional information about events or <span>tourist attractions</span> complete and complete. We are at your disposal for each of your ideas or requests. </p><p class="info__block--item"> <span>GOLDEN BIS</span> offers comfortable and <span>modern accommodation</span> in a very <span>quiet neighborhood</span> near the <span>city center</span>. The apartment is located on the second floor of the house, this apartment has <span>two bedrooms</span>, one in a double bed with a large closet and in the other two single beds and a closet with access to a fenced and tiled terrace. The apartment also has a large <span>luxury living room</span> and dining area. There is also a kitchen at guests' disposal, <span>fully equipped</span> with kitchen appliances for preparing and storing food. At the entrance to the apartment there is a terrace with a seating area, overlooking the Town Hall. </p><p class="info__block--item"> The surroundings of <span>GOLDEN BIS</span> are always <span>calm and quiet</span> in the evening and at the time prescribed by the house rules. The building is in an <span>excellent position</span> a few minutes from the city center, but still equipped with all the necessary amenities a few steps from the apartment, there is a <span>large market</span>, two bakeries, a butcher shop, two shops, exchange office. Ambulance, Ambulance, pharmacy. Gym. Playground for children. The popular Dud Suma Walking or Exercising Park is 700 meters from the apartment. <span>Bus and taxi station</span> is located 300m from the apartment. </p></div><h2 class="heading">ADDITIONAL <span>INFORMATION</span></h2> <div class="info__grid"> <div class="info__grid--item"> <i class="fas fa-wifi"></i> <p class="grid__text"> WiFi is available in all areas and is free of charge. </p></div><div class="info__grid--item"> <i class="fas fa-parking"></i> <p class="grid__text"> Free private parking is available on site (reservation is not needed). </p></div><div class="info__grid--item"> <i class="fas fa-language"></i> <p class="grid__text"> We speak - English, Russian, German, Polish and Serbian. </p></div><div class="info__grid--item"> <i class="fas fa-home"></i> <p class="grid__text"> The apartment consists of 2 separate bedrooms, 1 bathroom and a living room. </p></div><div class="info__grid--item"> <i class="fas fa-bed"></i> <p class="grid__text"> We have 1 king bed in one bedroom and 2 single beds in the other bedroom. </p></div><div class="info__grid--item"> <i class="fas fa-broom"></i> <p class="grid__text"> We offer paid services such as: daily housekeeping, ironing service, laundry. </p></div><div class="info__grid--item"> <i class="fas fa-tree"></i> <p class="grid__text"> Outdoor facilities: BBQ facilities, terrace, garden. </p></div><div class="info__grid--item"> <i class="fas fa-fan"></i> <p class="grid__text"> We have a designated smoking area, air conditioning, smoke-free property, heating etc. </p></div><div class="info__grid--item"> <i class="fas fa-pizza-slice"></i> <p class="grid__text"> You can cook your own food. We offer cooking basics: pots and pans, oil, salt and pepper, etc. </p></div></div></div></section> <section id="gallery" class="gallery"> <div class="content"> <div class="gallery__images"> <img class="gallery__img" src="img/img-1.jpg" alt=""/> <img class="gallery__img" src="img/img-2.jpg" alt=""/> <img class="gallery__img" src="img/img-3.jpg" alt=""/> <img class="gallery__img" src="img/img-4.jpg" alt=""/> <img class="gallery__img" src="img/img-5.jpg" alt=""/> <img class="gallery__img" src="img/img-6.jpg" alt=""/> <img class="gallery__img" src="img/img-7.jpg" alt=""/> <img class="gallery__img" src="img/img-8.jpg" alt=""/> <img class="gallery__img" src="img/img-9.jpg" alt=""/> </div></div></section> <section id="contact" class="contact"> <div class="content contact__content"> <div class="contact__left"> <img class="contact__logo" src="img/logo.png" alt=""/> <div class="contact__personal"> <div class="contact__personal--item"> <i class="contact__personal--icon fas fa-map-marker-alt"></i> <a href="https://www.google.com/maps?ll=46.104172,19.648245&z=14&t=m&hl=sr&gl=RS&mapclient=embed&cid=9428238211250265925" target="_blank">Praška 64, Subotica, Serbia</a> a </div><div class="contact__personal--item"> <i class="contact__personal--icon fas fa-mobile-alt"></i> <a href="tel:+381653580334">+381 65 3580334</a> </div><div class="contact__personal--item"> <i class="contact__personal--icon fas fa-envelope"></i> <a href="mailto:goldenbisapartments@gmail.com">goldenbisapartments@gmail.com</a> </div></div><div class="contact__social"> <a target="_blank" href="https://abnb.me/uGNzfpwfz3"><i class="contact__social--icon fab fa-airbnb"></i></a> <a target="_blank" href="https://www.booking.com/Share-DFiLf8"><i class="contact__social--icon fab fa-bootstrap"></i></a> <a target="_blank" href="https://instagram.com/goldenbis_apartmani_subotica?igshid=1la70950qs5gu"><i class="contact__social--icon fab fa-instagram"></i></a> <a target="_blank" href="https://www.facebook.com/apartmaniGoldenBIS/"><i class="contact__social--icon fab fa-facebook"></i></a> </div></div><div class="contact__right"> <iframe class="contact__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31302.603749818307!2d19.65148787797456!3d46.09525441193648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4743677b2bba6453%3A0x82d7d4b33f561f45!2sGolden%20BIS!5e0!3m2!1ssr!2srs!4v1580912473721!5m2!1ssr!2srs"></iframe> </div></div></section> <section class="copyright"> <div class="content"> <p class="copyright__message"> Copyright © 2020 <span>Golden BIS</span> ─ All rights reserved. Powered by <span>Bojan Tubić</span>. </p></div></section> <script src="app.js"></script></body></html>
