Changed favicon, mark tag, email address

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0/css/all.min.css" />
     <link rel="stylesheet" href="style.css" />
@@ -28,21 +28,21 @@
                 </ul>
             </div>
             <div class="home__text">
-                <h1 class="home__text--up"> <span class="home__name">GOLDEN BIS</span> APARTMENTS </h1>
-                <p class="home__text--down"> Ones of the highest rated apartments on <a target="_blank" rel="noopener" href="https://www.booking.com/Share-DFiLf8"><span class="underline">Booking</span></a> and <a target="_blank" rel="noopener" href="https://abnb.me/uGNzfpwfz3"><span class="underline">Airbnb</span></a> with more than 40 ratings. </p>
+                <h1 class="home__text--up"> <mark class="home__name">GOLDEN BIS</mark> APARTMENTS </h1>
+                <p class="home__text--down"> Ones of the highest rated apartments on <a target="_blank" rel="noopener" href="https://www.booking.com/Share-DFiLf8"><mark class="underline">Booking</mark></a> and <a target="_blank" rel="noopener" href="https://abnb.me/uGNzfpwfz3"><mark class="underline">Airbnb</mark></a> with more than 40 ratings. </p>
             </div>
         </div>
     </section>
     <section id="info" class="info">
         <div class="filler">&nbsp;</div>
         <div class="content">
-            <h2 class="heading">BASIC <span>INFORMATION</span></h2>
+            <h2 class="heading">BASIC <mark>INFORMATION</mark></h2>
             <div class="info__block">
-                <p class="info__block--item"> <span>GOLDEN BIS</span> is unique for its <span>hospitality</span> and the host's desire to make your stay <span></span>enjoyable and memorable. We strive to justify your trust in every sense. There are <span>two terraces</span> in the building where one can always watch the sunrise and the other the <span>sunset</span>. We are always here to make all your activities as <span>additional transportation</span>, additional services in the apartment or additional information about events or <span>tourist attractions</span> complete and complete. We are at your disposal for each of your ideas or requests. </p>
-                <p class="info__block--item"> <span>GOLDEN BIS</span> offers comfortable and <span>modern accommodation</span> in a very <span>quiet neighborhood</span> near the <span>city center</span>. The apartment is located on the second floor of the house, this apartment has <span>two bedrooms</span>, one in a double bed with a large closet and in the other two single beds and a closet with access to a fenced and tiled terrace. The apartment also has a large <span>luxury living room</span> and dining area. There is also a kitchen at guests' disposal, <span>fully equipped</span> with kitchen appliances for preparing and storing food. At the entrance to the apartment there is a terrace with a seating area, overlooking the Town Hall. </p>
-                <p class="info__block--item"> The surroundings of <span>GOLDEN BIS</span> are always <span>calm and quiet</span> in the evening and at the time prescribed by the house rules. The building is in an <span>excellent position</span> a few minutes from the city center, but still equipped with all the necessary amenities a few steps from the apartment, there is a <span>large market</span>, two bakeries, a butcher shop, two shops, exchange office. Ambulance, Ambulance, pharmacy. Gym. Playground for children. The popular Dud Suma Walking or Exercising Park is 700 meters from the apartment. <span>Bus and taxi station</span> is located 300m from the apartment. </p>
+                <p class="info__block--item"> <mark>GOLDEN BIS</mark> is unique for its <mark>hospitality</mark> and the host's desire to make your stay <mark></mark>enjoyable and memorable. We strive to justify your trust in every sense. There are <mark>two terraces</mark> in the building where one can always watch the sunrise and the other the <mark>sunset</mark>. We are always here to make all your activities as <mark>additional transportation</mark>, additional services in the apartment or additional information about events or <mark>tourist attractions</mark> complete and complete. We are at your disposal for each of your ideas or requests. </p>
+                <p class="info__block--item"> <mark>GOLDEN BIS</mark> offers comfortable and <mark>modern accommodation</mark> in a very <mark>quiet neighborhood</mark> near the <mark>city center</mark>. The apartment is located on the second floor of the house, this apartment has <mark>two bedrooms</mark>, one in a double bed with a large closet and in the other two single beds and a closet with access to a fenced and tiled terrace. The apartment also has a large <mark>luxury living room</mark> and dining area. There is also a kitchen at guests' disposal, <mark>fully equipped</mark> with kitchen appliances for preparing and storing food. At the entrance to the apartment there is a terrace with a seating area, overlooking the Town Hall. </p>
+                <p class="info__block--item"> The surroundings of <mark>GOLDEN BIS</mark> are always <mark>calm and quiet</mark> in the evening and at the time prescribed by the house rules. The building is in an <mark>excellent position</mark> a few minutes from the city center, but still equipped with all the necessary amenities a few steps from the apartment, there is a <mark>large market</mark>, two bakeries, a butcher shop, two shops, exchange office. Ambulance, Ambulance, pharmacy. Gym. Playground for children. The popular Dud Suma Walking or Exercising Park is 700 meters from the apartment. <mark>Bus and taxi station</mark> is located 300m from the apartment. </p>
             </div>
-            <h2 class="heading">ADDITIONAL <span>INFORMATION</span></h2>
+            <h2 class="heading">ADDITIONAL <mark>INFORMATION</mark></h2>
             <div class="info__grid">
                 <div class="info__grid--item"> <i class="fas fa-wifi"></i>
                     <p class="grid__text"> WiFi is available in all areas and is free of charge. </p>
@@ -85,7 +85,7 @@
                 <div class="contact__personal">
                     <div class="contact__personal--item"> <i class="contact__personal--icon fas fa-map-marker-alt"></i> <a href="https://www.google.com/maps?ll=46.104172,19.648245&z=14&t=m&hl=sr&gl=RS&mapclient=embed&cid=9428238211250265925" target="_blank" rel="noopener">Praška 64, Subotica, Serbia</a></div>
                     <div class="contact__personal--item"> <i class="contact__personal--icon fas fa-mobile-alt"></i> <a href="tel:+381653580334">+381 65 3580334</a> </div>
-                    <div class="contact__personal--item"> <i class="contact__personal--icon fas fa-envelope"></i> <a href="mailto:goldenbisapartments@gmail.com">goldenbisapartments@gmail.com</a> </div>
+                    <div class="contact__personal--item"> <i class="contact__personal--icon fas fa-envelope"></i> <a href="mailto:goldenbisapartments@gmail.com">goldenbis.apartments@gmail.com</a> </div>
                 </div>
                 <div class="contact__social"> <a target="_blank" rel="noopener" href="https://abnb.me/uGNzfpwfz3"><i class="contact__social--icon fab fa-airbnb"></i></a> <a target="_blank" href="https://www.booking.com/Share-DFiLf8"><i class="contact__social--icon fab fa-bootstrap"></i></a> <a target="_blank" rel="noopener" href="https://instagram.com/goldenbis_apartmani_subotica?igshid=1la70950qs5gu"><i class="contact__social--icon fab fa-instagram"></i></a> <a target="_blank" rel="noopener" href="https://www.facebook.com/apartmaniGoldenBIS/"><i class="contact__social--icon fab fa-facebook"></i></a> </div>
             </div>
@@ -96,7 +96,7 @@
     </section>
     <section class="copyright">
         <div class="content">
-            <p class="copyright__message"> Copyright © 2020 <span>Golden BIS</span> ─ All rights reserved. Powered by <span>Bojan Tubić</span>. </p>
+            <p class="copyright__message"> Copyright © 2020 <mark>Golden BIS</mark> ─ All rights reserved. Powered by <mark>Bojan Tubić</mark>.</p>
         </div>
     </section>
     <script src="app.js"></script>
