--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     </section>
     <section id="gallery" class="gallery">
       <div class="content">
-        <h3 class="heading">OUR <mark>ACCOMODATION</mark></h3>
+        <h3 class="heading">OUR <mark>ACCOMMODATION</mark></h3>
         <div class="gallery__images">
           <img class="gallery__img" src="img/img-s-1.webp" alt="" />
           <img class="gallery__img" src="img/img-s-2.webp" alt="" />
