Changed image format

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta
       name="description"
-      content="Click here to choose one of the best and cheapest rooms and apartments in Subotica, Serbia. You can book us on Airbnb or Booking."
+      content="Click here to choose one of the best and cheapest rooms and apartments in Subotica, Serbia. You can book our accommodation on Airbnb and Booking."
     />
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
     <link
@@ -26,7 +26,7 @@
       <div class="content">
         <div class="home__btn"><div class="home__btn--line"></div></div>
         <div class="home__nav">
-          <img class="home__logo" src="img/logo.webp" alt="Logo" />
+          <img class="home__logo" src="img/logo.png" alt="Logo" />
           <ul class="home__list">
             <li class="home__item">
               <a href="#home" class="home__link" rel="noreferrer noopener"
@@ -189,22 +189,22 @@
       <div class="content">
         <h3 class="heading">OUR <mark>ACCOMMODATION</mark></h3>
         <div class="gallery__images">
-          <img class="gallery__img" src="img/img-s-1.webp" alt="" />
-          <img class="gallery__img" src="img/img-s-2.webp" alt="" />
-          <img class="gallery__img" src="img/img-s-3.webp" alt="" />
-          <img class="gallery__img" src="img/img-s-4.webp" alt="" />
-          <img class="gallery__img" src="img/img-s-5.webp" alt="" />
-          <img class="gallery__img" src="img/img-s-6.webp" alt="" />
-          <img class="gallery__img" src="img/img-s-7.webp" alt="" />
-          <img class="gallery__img" src="img/img-s-8.webp" alt="" />
-          <img class="gallery__img" src="img/img-s-9.webp" alt="" />
+          <img class="gallery__img" src="img/img-s-1.png" alt="" />
+          <img class="gallery__img" src="img/img-s-2.png" alt="" />
+          <img class="gallery__img" src="img/img-s-3.png" alt="" />
+          <img class="gallery__img" src="img/img-s-4.png" alt="" />
+          <img class="gallery__img" src="img/img-s-5.png" alt="" />
+          <img class="gallery__img" src="img/img-s-6.png" alt="" />
+          <img class="gallery__img" src="img/img-s-7.png" alt="" />
+          <img class="gallery__img" src="img/img-s-8.png" alt="" />
+          <img class="gallery__img" src="img/img-s-9.png" alt="" />
         </div>
       </div>
     </section>
     <section id="contact" class="contact">
       <div class="content contact__content">
         <div class="contact__left">
-          <img class="contact__logo" src="img/logo.webp" alt="" />
+          <img class="contact__logo" src="img/logo.png" alt="" />
           <div class="contact__personal">
             <div class="contact__personal--item">
               <i class="contact__personal--icon fas fa-map-marker-alt"></i>
